Lexer and Regex components; improve clarity and structure